--- a/tools/convert/css/src/code.less
+++ b/tools/convert/css/src/code.less
@@ -31,7 +31,10 @@
     }
 
     pre:not(.sourceCode) {
-        .define-code-border()
+        .define-code-border();
+        code {
+            white-space: nowrap;
+        }
     }
 
     pre.numberSource {
